--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://desp0o.github.io/photography/",
+  "homepage": "http://www.shutter.pics/",
   "name": "photography",
   "version": "0.1.1",
   "private": true,
