change homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://www.shutter.pics/",
+  "homepage": "https://meek-basbousa-38f2cc.netlify.app",
   "name": "photography",
   "version": "0.1.1",
   "private": true,
